@@ -38,6 +38,9 @@ debhelper (10.9.1) UNRELEASED; urgency=medium
     escaped names like "\x2d".  Thanks to Bernd Zeimetz for
     reporting the issue.  (Closes: #764730)
   * dh_systemd_start: Ditto.
+  * meson.pm: Add prototype support for cross building by relying
+    on /usr/share/meson/debcrossgen.  Note that this is currently
+    not functional due to #875703.
 
   [ Dmitry Shachnev ]
   * qmake.pm: Add basic cross-building support.  (Closes: #877357)
